@@ -8,7 +8,6 @@ DESIGN ISSUES
 - spacing change between charge pairs is very small with battery, because battery range is so small compared to sim max
 
 HIGH PRIORITY
-- model for detector vectors: 0 outside plates, either air or dielectric inside plates
 - chose a more appropriate max for detector vectors
 - show absolute values in detector
 - remove dielectric gap from model
