@@ -1,3 +1,4 @@
+10/24/10 model for detector vectors: 0 outside plates, either air or dielectric inside plates
 # 0.00.34 (45344) Oct 22, 2010
 10/22/10 dev version for discussion with Noah P.
 10/21/10 demonstrate dielectric gap = 0
